Bug 178128 - inline forwarding messages with attachements is broken
Summary: inline forwarding messages with attachements is broken
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.10.92
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-19 01:41 UTC by Marc Schiffbauer
Modified: 2008-12-21 23:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Schiffbauer 2008-12-19 01:41:16 UTC
Version:           4.1.85 (using Devel)
OS:                Linux
Installed from:    Compiled sources

When inline-forwarding an email that has an attachment, kmail does not apply the forwarding template. Instead the original mailbody apears in the editor without any changes but the footer added.

Forwarding mails without attachements works as expected.
Comment 1 Thomas McGuire 2008-12-21 16:38:23 UTC
SVN commit 899776 by tmcguire:

Fix inline-forwarding of messages with attachments.

The template parser copied the original message and then set the whole body to the template text.
This did not work for multipart messages, since setting the body there has no effect (and would
discard the attachment if it had any effect).
Therefore, we simply place the template text in the first text part we find in case of multipart
messages. This probably still breaks with HTML messages with attachments or with other complicated
nested structures. Oh well.

BUG: 178128
BUG: 146921


 M  +61 -43    kmmessage.cpp  
 M  +68 -35    kmmessage.h  
 M  +12 -2     templateparser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=899776
Comment 2 Thomas McGuire 2008-12-21 23:53:12 UTC
SVN commit 899972 by tmcguire:

Backport r899776 by tmcguire from trunk to the 4.1 branch:

Fix inline-forwarding of messages with attachments.

The template parser copied the original message and then set the whole body to the template text.
This did not work for multipart messages, since setting the body there has no effect (and would
discard the attachment if it had any effect).
Therefore, we simply place the template text in the first text part we find in case of multipart
messages. This probably still breaks with HTML messages with attachments or with other complicated
nested structures. Oh well.

CCBUG: 178128
CCBUG: 146921
kolab/issue 3219



 M  +61 -43    kmmessage.cpp  
 M  +68 -35    kmmessage.h  
 M  +12 -2     templateparser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=899972