Fix inline-forwarding of messages with attachments.

The template parser copied the original message and then set the whole body to the template text.
This did not work for multipart messages, since setting the body there has no effect (and would
discard the attachment if it had any effect).
Therefore, we simply place the template text in the first text part we find in case of multipart
messages. This probably still breaks with HTML messages with attachments or with other complicated
nested structures. Oh well.

BUG: 178128
BUG: 146921

svn path=/trunk/KDE/kdepim/; revision=899776